# Advent-of-Code-2022

./: package-lock.json  pyproject.toml
day1/: day1.py
day11/: day11.py
day12/: day12.py
day17/: day17.py
day2/: day2.py
day3/: day3.py
day4/: day4.py
day5/: day5.py
day6/: day6.py
day7/: day7.py
day8/: day8.py
day9-failed/: day9.js
